[package]
name = "rfs"
version = "0.1.0"
edition = "2021"
authors = ["Kyle Petryszak <projectinitiativedev@gmail.com>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1.20", features = ["full"] }
url = { version = "2", features = ["serde"] }
serde_json = "1.0"
fuser = "0.11"
chrono = "0.4.19"
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
fuse_mt = "0.6.0"
log = "0.4.17"
libc = "0.2.126"
tonic = "0.7.2"
prost = "0.10.4"
ctrlc = "3.2.2"
clap = { version = "3.2.20", features = ["derive"] }

[build-dependencies]
tonic-build = { version = "0.7.2", features = ["prost"] }
#protobuf-codegen = "3.1.0"
#protobuf-parse = "3.1.0"
#protoc-bin-vendored = "3.0.0"
